[gd_scene load_steps=4 format=3 uid="uid://33tqhb5p6ylb"]

[ext_resource type="Script" uid="uid://dqkqb518uysll" path="res://scenes/Weapons/Melees/melee_long_spearjab.gd" id="1_wa0lo"]
[ext_resource type="PackedScene" uid="uid://s1juok152iqw" path="res://scenes/Weapons/Melees/Melee_Long_Spear.tscn" id="2_sxkrg"]

[sub_resource type="CircleShape2D" id="CircleShape2D_x3feo"]
radius = 232.009

[node name="SpearJab" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_wa0lo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_x3feo")

[node name="WeaponPivot" type="Marker2D" parent="."]

[node name="MeleePoint" type="Marker2D" parent="WeaponPivot"]
unique_name_in_owner = true
position = Vector2(100, 0)

[node name="Hit" parent="WeaponPivot/MeleePoint" instance=ExtResource("2_sxkrg")]
unique_name_in_owner = true
visible = false
position = Vector2(106, 0)
rotation = 0.0006212

[node name="MeleePoint2" type="Marker2D" parent="WeaponPivot"]
unique_name_in_owner = true
position = Vector2(-100, 0)
rotation = 3.14159

[node name="Hit2" parent="WeaponPivot/MeleePoint2" instance=ExtResource("2_sxkrg")]
unique_name_in_owner = true
visible = false
position = Vector2(-107, 1)
rotation = -3.14159

[node name="MeleePoint3" type="Marker2D" parent="WeaponPivot"]
unique_name_in_owner = true
position = Vector2(1, -100)
rotation = 4.71239

[node name="Hit3" parent="WeaponPivot/MeleePoint3" instance=ExtResource("2_sxkrg")]
unique_name_in_owner = true
visible = false
position = Vector2(-107, 1)
rotation = -3.14159

[node name="MeleePoint4" type="Marker2D" parent="WeaponPivot"]
unique_name_in_owner = true
position = Vector2(0, 100)
rotation = 1.5708

[node name="Hit4" parent="WeaponPivot/MeleePoint4" instance=ExtResource("2_sxkrg")]
unique_name_in_owner = true
visible = false
position = Vector2(-107, 1)
rotation = -3.14159

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
